update PCA script

--- a/pca_conformations.ipynb
+++ b/pca_conformations.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "9bb27daf-1fdf-4dd7-9b1c-d72d9457fc05",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
     "        closest_frame = trajs[cluster_mask][closest_frame_index]\n",
     "\n",
     "        # Save the closest frame as a PDB file\n",
-    "        pdb_filename = f'{output_directory}/PCA_{x}_PCA_{y}_cluster_{cluster_id}_closest_structure.pdb'\n",
+    "        pdb_filename = f'{output_directory}/PCA_{x+1}_PCA_{y+1}_cluster_{cluster_id}_closest_structure.pdb'\n",
     "        closest_frame.save(pdb_filename)"
    ]
   },
